--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=behappy;Username=fatihkaya;Password=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
